--- a/index.html
+++ b/index.html
@@ -118,19 +118,40 @@
 				<a href="tasktwo/tasktwo17.html" class="btn-dome">Dome</a>
 				<a href="https://github.com/quchengqucheng/ife2016spring/blob/gh-pages/taskone/taskone17.html" class="btn-code">代码地址</a>
 			</li>
-			<li class="notdone">
+			<li class="done">
 				<h3>tasktwo18</h3>
 				<p></p>
 				<!-- <p>完成一个HTML页面代码编写,关注文档结构</p> -->
 				<a href="tasktwo/tasktwo18.html" class="btn-dome">Dome</a>
 				<a href="https://github.com/quchengqucheng/ife2016spring/blob/gh-pages/taskone/taskone18.html" class="btn-code">代码地址</a>
 			</li>
-			<li class="notdone">
+			<li class="done">
 				<h3>tasktwo19</h3>
 				<p></p>
 				<!-- <p>完成一个HTML页面代码编写,关注文档结构</p> -->
 				<a href="tasktwo/tasktwo19.html" class="btn-dome">Dome</a>
 				<a href="https://github.com/quchengqucheng/ife2016spring/blob/gh-pages/taskone/taskone19.html" class="btn-code">代码地址</a>
+			</li>
+			<li class="done">
+				<h3>tasktwo29</h3>
+				<p></p>
+				<!-- <p>完成一个HTML页面代码编写,关注文档结构</p> -->
+				<a href="tasktwo/tasktwo29.html" class="btn-dome">Dome</a>
+				<a href="https://github.com/quchengqucheng/ife2016spring/blob/gh-pages/taskone/taskone29.html" class="btn-code">代码地址</a>
+			</li>
+			<li class="done">
+				<h3>tasktwo30</h3>
+				<p></p>
+				<!-- <p>完成一个HTML页面代码编写,关注文档结构</p> -->
+				<a href="tasktwo/tasktwo30.html" class="btn-dome">Dome</a>
+				<a href="https://github.com/quchengqucheng/ife2016spring/blob/gh-pages/taskone/taskone30.html" class="btn-code">代码地址</a>
+			</li>
+			<li class="done">
+				<h3>tasktwo31</h3>
+				<p></p>
+				<!-- <p>完成一个HTML页面代码编写,关注文档结构</p> -->
+				<a href="tasktwo/tasktwo31.html" class="btn-dome">Dome</a>
+				<a href="https://github.com/quchengqucheng/ife2016spring/blob/gh-pages/taskone/taskone31.html" class="btn-code">代码地址</a>
 			</li>
 		</div>
 		<div class="items">
