--- a/tasktwo/tasktwo25.html
+++ b/tasktwo/tasktwo25.html
@@ -3,18 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>tasktwo25</title>
-	<link rel="stylesheet" type="text/css" href="css/tasktwo25.css">
+	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-	<script type="text/javascript" src="js/task25.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/tasktwo25.css">
+	<script type="text/javascript" src="js/task25_2.js"></script>
 </head>
 <body>
 	<div id="container">
 		<div id="root">
 		</div>
-		<button id="preOrder">前序遍历</button>
-		<button id="postOrder">后序遍历</button>
-		<input type="text" id="inputText"></input><button id="preSearch">前序查询</button>
-		<button id="postSearch">后序查询</button>
+		<input type="text" id="inputText"></input><button id="preSearch">查询</button>
 		<span id="alertText">请输入查询元素</span><br>
 		
 		<div id="floatDiv">
